# mdconverter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  install.ps1  mkdocs.yml  pyproject.toml
.agent/workflows/: create-pr.md  discard-feature.md  new-feature.md  release-feature.md
.github/workflows/: ci.yml
docs/: contributing.md  index.md
docs/api/: core.md  exceptions.md  plugins.md
docs/brainstorming/: architecture_improvements.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  configuration.md  vn-legal.md
knowledge/: session_learnings.md
src/mdconverter/: __init__.py  cli.py  config.py
src/mdconverter/core/: __init__.py  base.py  cache.py  exceptions.py  gemini.py  llamaparse.py  llm.py  logging.py  pandoc.py  registry.py  watcher.py
src/mdconverter/plugins/: __init__.py  manager.py
src/mdconverter/plugins/vn_legal/: __init__.py  detector.py  linter.py  processor.py
src/mdconverter/providers/: gemini.py  openai.py
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_converters.py  test_linter.py  test_logging.py  test_processor.py  test_registry.py  test_vn_legal.py  test_watcher.py
