[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdconvert-cli"
version = "1.0.0"
description = "Modern document to Markdown converter with Vietnamese legal document support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "IBST BIM Team", email = "bim@ibst.vn" }
]
keywords = ["markdown", "converter", "document", "pdf", "docx", "vietnamese", "legal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]
llm = [
    "google-generativeai>=0.8.0",
    "llama-index>=0.11.0",
]

[project.scripts]
mdconvert = "mdconverter.cli:app"

[project.urls]
Homepage = "https://github.com/ibst-bim/mdconverter"
Documentation = "https://github.com/ibst-bim/mdconverter#readme"
Repository = "https://github.com/ibst-bim/mdconverter"

[tool.hatch.build.targets.wheel]
packages = ["src/mdconverter"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (Typer pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["llama_index.*", "google.generativeai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/mdconverter --cov-report=term-missing"
